# membrane_vk_video_plugin

./: .gitignore  Cargo.toml  README.md  mix.exs
.circleci/: config.yml
.github/workflows/: ci.yml  release.yml
lib/: decoder.ex  device_server.ex  encoder.ex  native.ex  transcoder.ex  vk_video.ex
lib/decoder/: native.ex
lib/encoder/: constant_bitrate.ex  native.ex  variable_bitrate.ex
lib/transcoder/: output_spec.ex
native/vkvideo/: Cargo.toml
native/vkvideo/src/: decoder.rs  encoder.rs  lib.rs  transcoder.rs
native/vkvideo_decoder/: Cargo.toml  README.md
native/vkvideo_decoder/src/: lib.rs
native/vkvideo_encoder/: Cargo.toml
native/vkvideo_encoder/src/: lib.rs
test/: decoder_native_test.exs  decoder_test.exs  encoder_native_test.exs  encoder_test.exs  test_helper.exs  transcoder_test.exs
test/fixtures/: input-10.h264  input-100.h264  ref-10-high_quality-constant_bitrate.h264  ref-10-high_quality-disabled.h264  ref-10-high_quality-encoder_default.h264  ref-10-high_quality-variable_bitrate.h264  ref-10-low_latency-constant_bitrate.h264  ref-10-low_latency-disabled.h264  ref-10-low_latency-encoder_default.h264  ref-10-low_latency-variable_bitrate.h264  ref-1280x720.h264  ref-640x360.h264
