[package]
name = "vkvideo"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
rustler = "0.37.0"
vk-video = { git = "https://github.com/software-mansion/smelter.git", rev = "2f60dd3dd47fe583005eac2b0e393b5b5c8efd0b", features=["expose_parsers", "transcoder"], default-features=false}
